Fix warn CSS formatting: overlap

--- a/static/assets/site.css
+++ b/static/assets/site.css
@@ -11,6 +11,7 @@ div.admonition {
     border: 1px solid #808080;
     padding: 10px 20px;
     border-radius: 10px;
+    display: flow-root;
 }
 span.published {
     display: block;
